feat: Add Projects in api (and upgrade the api)
